[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "struct-ify"
authors = [
  { name="halbow" },
]
version = "0.1.0"
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/halbow/"
"Bug Tracker" = "https://github.com/halbow//issues"


[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/_version.py"
template = '''
version = "{version}"
'''

[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.lint.isort]
known-local-folder=["structify", "tests"]

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true


